# autocommiter.cli

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  USAGE.md
src/: api_client.rs  changes_summarizer.rs  config.rs  git.rs  gitmoji.rs  lib.rs  main.rs  model_manager.rs
