[package]
name = "autocommiter"
version = "1.1.0"
edition = "2021"
description = "Auto-generate git commit messages using AI"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
shell-words = "1.1"
regex = "1.10"
tempfile = "3.10"
lazy_static = "1.4"
rand = "0.8"
